--- a/src/components/TaskList/task-list.css
+++ b/src/components/TaskList/task-list.css
@@ -8,7 +8,7 @@
     bottom: 100%;
 }
 
-.toggle-all + label {
+.toggle-all + .label {
     width: 60px;
     height: 34px;
     font-size: 0;
@@ -19,14 +19,14 @@
     transform: rotate(90deg);
 }
 
-.toggle-all + label:before {
+.toggle-all + .label:before {
     content: '❯';
     font-size: 22px;
     color: #e6e6e6;
     padding: 10px 27px 10px 27px;
 }
 
-.toggle-all:checked + label:before {
+.toggle-all:checked + .label:before {
     color: #737373;
 }
 
@@ -81,30 +81,30 @@
     opacity: 0;
 }
 
-.todo-list li .toggle + label {
+.todo-list li .toggle + .label {
 
     background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23ededed%22%20stroke-width%3D%223%22/%3E%3C/svg%3E');
     background-repeat: no-repeat;
     background-position: center left;
 }
 
-.todo-list li .toggle:checked + label {
+.todo-list li .toggle:checked + .label {
     background-image: url('data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A//www.w3.org/2000/svg%22%20width%3D%2240%22%20height%3D%2240%22%20viewBox%3D%22-10%20-18%20100%20135%22%3E%3Ccircle%20cx%3D%2250%22%20cy%3D%2250%22%20r%3D%2250%22%20fill%3D%22none%22%20stroke%3D%22%23bddad5%22%20stroke-width%3D%223%22/%3E%3Cpath%20fill%3D%22%235dc2af%22%20d%3D%22M72%2025L42%2071%2027%2056l-4%204%2020%2020%2034-52z%22/%3E%3C/svg%3E');
 }
 
-.todo-list li label {
+.todo-list li .label {
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 15px 85px 15px 60px;
 }
 
-.todo-list li label .created {
+.todo-list li .label .created {
     font-size: 13px;
     color: gray;
 }
 
-.todo-list li label .description {
+.todo-list li .label .description {
     word-break: break-all;
     display: block;
     line-height: 1.2;
@@ -113,7 +113,7 @@
     color: #4d4d4d;
 }
 
-.todo-list li.completed label .description {
+.todo-list li.completed .label .description {
     color: #cdcdcd;
     text-decoration: line-through;
 }
