--- a/src/components/NewTaskForm/new-task-form.css
+++ b/src/components/NewTaskForm/new-task-form.css
@@ -1,4 +1,9 @@
-.new-todo,
+.new-todo-form {
+    display: grid;
+    grid-template-columns: 3fr 1fr 1fr;
+}
+
+.new-todo, .new-todo-form .new-todo-timer,
 .edit {
     position: relative;
     margin: 0;
@@ -8,7 +13,7 @@
     font-weight: inherit;
     line-height: 1.4em;
     color: inherit;
-    padding: 6px;
+    padding: 12px;
     border: 1px solid #999;
     box-shadow: inset 0 -1px 5px 0 rgba(0, 0, 0, 0.2);
     box-sizing: border-box;
@@ -16,8 +21,7 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-.new-todo {
-    padding: 16px 16px 16px 60px;
+.new-todo, .new-todo-form .new-todo-timer {
     border: none;
     background: rgba(0, 0, 0, 0.003);
     box-shadow: inset 0 -2px 1px rgba(0,0,0,0.03);
